<resources>
    <string name="app_name">TrainLine</string>
    <string name="barValue">0 %</string>
    <string name="userName">User Name</string>
    <string name="passWord">Password</string>
    <string name="loginBtn">LOGIN</string>
    <string name="signInBtn">SIGN IN</string>
    <string name="guestBtn">LOGIN AS GUEST</string>
    <string name="scanQr">Scan QR Code</string>
    <string name="reg">Don\'t Have An Account?<a href="">Sign-Up Now</a></string>
    <string name="logo">Logo</string>
    <string name="topic">Train Line</string>
    <string name="booking">Booking</string>
    <string name="expand_all">Expand ALL</string>
    <string name="trips">Trips</string>
    <string name="receipts">Receipts</string>
    <string name="history">History</string>
    <string name="confirmed">Confirmed</string>
    <string name="finished">Finished</string>
    <string name="to_do_admin">To Do Admin</string>
    <string name="add_train_schedule">Train Schedule</string>
    <string name="start_station">Start Station</string>
    <string name="end_station">End Station</string>
    <string name="destination">Destination(Km)</string>
    <string name="price_of_ticket_rs">Price of Ticket(Rs.)</string>
    <string name="type_of_train">Type of Train</string>
    <string name="departure_time">Departure Time</string>
    <string name="add_new_schedule">Add New Schedule</string>
    <string name="signUp">Sign UP</string>
    <string name="nic">NIC number</string>
    <string name="passWordComfirm">Comfirm Password</string>
    <string name="email">Email</string>
    <string name="seat_booking">Seat Booking</string>
    <string name="count_of_passengers">Count of Passengers</string>
    <string name="total_amount">Total Amount</string>
    <string name="book_now">Book Now</string>
</resources>