<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_buttons_custom"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/edittextbox1"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/edittextbox1"
        android:ems="10"
        android:hint="@string/passWord"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/guestBtn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="540dp"
        android:background="@drawable/login_page_buttons_custom"
        android:text="@string/guestBtn"
        android:textSize="17sp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480dp"
        android:background="@drawable/login_page_buttons_custom"
        android:text="@string/loginBtn"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/regLink"
        android:layout_width="341dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="611dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:layout_marginBottom="120dp"
        android:text="@string/reg"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/logo"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        app:srcCompat="@drawable/trainline" />

</RelativeLayout>