<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/to_do_admin"
                android:textSize="36sp"
                android:textAllCaps="true"
                android:padding="10dp"
                android:textColor="@color/topicColor"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:padding="15dp">

            <Button
                android:id="@+id/booking"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/btn"
                android:text="@string/booking"
                android:textSize="40dp"
                android:textColor="@color/topicColor"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="2dp"
            android:padding="15dp">

            <Button
                android:id="@+id/trip"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/btn"
                android:text="@string/trips"
                android:textSize="40dp"
                android:textColor="@color/topicColor"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="2dp"
            android:padding="15dp">

            <Button
                android:id="@+id/receipt"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/btn"
                android:text="@string/receipts"
                android:textSize="40dp"
                android:textColor="@color/topicColor"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="2dp"
            android:padding="15dp">

            <Button
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/btn"
                android:text="@string/history"
                android:textSize="40dp"
                android:textColor="@color/topicColor"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>