<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/edittextbox1"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/nic"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/edittextbox1"
        android:ems="10"
        android:hint="@string/nic"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/edittextbox1"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/edittextbox1"
        android:ems="10"
        android:hint="@string/passWord"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:autofillHints="" />


    <EditText
        android:id="@+id/passWordComfirm"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/edittextbox1"
        android:ems="10"
        android:hint="@string/passWordComfirm"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:autofillHints="" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:background="@drawable/login_page_buttons_custom"
        android:text="@string/signUp"
        android:textSize="17sp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:contentDescription="@string/logo"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        app:srcCompat="@drawable/trainline" />




</RelativeLayout>