<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn_gradient_welcome"
    tools:context=".TrainShcedule">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="Train Schedule"
                android:textSize="30sp"
                android:textAllCaps="true"
                android:padding="10dp"
                android:textColor="@color/topicColor"/>

            <ImageView
                android:id="@+id/image1_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_station"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/et1_ad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittextbox1"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="-15dp"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_station"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/et2_ad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittextbox1"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="-15dp"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure_time"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/ed3_ad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittextbox1"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="-15dp"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/et4_ad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittextbox1"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="-15dp"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_of_ticket_rs"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/et5_ad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittextbox1"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="-15dp"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_of_train"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/et6_ad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittextbox1"
                android:fontFamily="@font/baloo"
                android:textColor="#ffffff"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="-15dp"
            android:padding="15dp">

            <Button
                android:id="@+id/add_ts"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="5dp"
                android:text="@string/add_new_schedule"
                android:background="@drawable/btn"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:fontFamily="@font/baloo"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

    </LinearLayout>


</ScrollView>