<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image1_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_menu_24"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/topic"
                android:textSize="36sp"
                android:textAllCaps="true"
                android:padding="10dp"
                android:textColor="@color/topicColor"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/image2_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_search_24"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/booking"
                android:fontFamily="@font/aclonica"
                android:textSize="30sp"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:padding="15dp">

            <Button
                android:id="@+id/booking_b"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/btn"
                android:text="@string/booking"
                android:textSize="40dp"
                android:textColor="@color/topicColor"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:padding="15dp">

            <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/btn"
                android:text="@string/confirmed"
                android:textSize="40dp"
                android:textColor="@color/topicColor"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:padding="15dp">

            <Button
                android:id="@+id/finish"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@drawable/btn"
                android:text="@string/finished"
                android:textSize="40dp"
                android:textColor="@color/topicColor"/>

        </RelativeLayout>

    </LinearLayout>


</ScrollView>